# Crew-AI-Projects

./: Personalized_Education_Assistant_Documentation.docx  requirements.txt  run_pipeline.py
code_debugging_assistant/: README.md  code_analysis_report.md  code_correction_report.md  manager_remarks.md  pyproject.toml
code_debugging_assistant/src/code_debugging_assistant/: crew.py  main.py
code_debugging_assistant/src/code_debugging_assistant/config/: agents.yaml  tasks.yaml
code_debugging_assistant/src/code_debugging_assistant/tools/: custom_tool.py
data/examples/: learning_materials.json  projects.json
data/examples/raw/: quizzes_raw.txt
data/generated_projects/exploratory-data-analysis-eda-for-pandas/: README.md  main.py  project.json
data/generated_projects/pandas-data-cleaning-and-preprocessing/: README.md  notebook.ipynb  project.json
data/generated_projects/pandas-data-visualization/: README.md  project.json
src/agents/: learning_agent.py  project_agent.py  quiz_agent.py
src/models/: learning_models.py  project_models.py  quiz_models.py
src/pipeline/: sequential_pipeline.py
src/tools/: project_suggester.py  project_template.py  serper_tool.py
src/utils/: llm.py
study_helper_agent/: README.md  pyproject.toml  report.md
study_helper_agent/Output_Data/: content.md  projects.md  quiz.md
study_helper_agent/knowledge/: user_preference.txt
study_helper_agent/src/study_helper_agent/: crew.py  main.py
study_helper_agent/src/study_helper_agent/config/: agents.yaml  tasks.yaml
