[project]
name = "code_debugging_assistant"
version = "0.1.0"
description = "Code_Debugging_Assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
code_debugging_assistant = "code_debugging_assistant.main:run"
run_crew = "code_debugging_assistant.main:run"
train = "code_debugging_assistant.main:train"
replay = "code_debugging_assistant.main:replay"
test = "code_debugging_assistant.main:test"
run_with_trigger = "code_debugging_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
