[project]
name = "study_helper_agent"
version = "0.1.0"
description = "Study_Helper_Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[openai,tools]==1.4.1",
]

[project.scripts]
study_helper_agent = "study_helper_agent.main:run"
run_crew = "study_helper_agent.main:run"
train = "study_helper_agent.main:train"
replay = "study_helper_agent.main:replay"
test = "study_helper_agent.main:test"
run_with_trigger = "study_helper_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
